@@ -1,5 +1,9 @@
 Change Log
 
+2009-05-14
+	Added code to grow the memory pools when loading large images.
+	Added interpreter tag to magic header (images are not portable).
+	Added another tweak for POSIX compatibility.
 2009-05-13
 	Administrative:
 	- Removed all those special variables ($@, $<, ...)
